--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ main {
     gap: 13px;
 
     height: 100vh;
+    padding: 0px 10px;
     background-color: var(--background-color-body);
 }
 
@@ -41,6 +42,10 @@ main .product {
     position: absolute;
     top: 8px;
     right: 50px;
+}
+
+.information {
+    text-align: center;
 }
 
 .information p, h1, h2 {
