--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ main {
     flex-wrap: wrap;
     gap: 13px;
 
-    height: 100vh;
+    min-height: 100vh;
     padding: 0px 10px;
     background-color: var(--background-color-body);
 }
